@@ -1,3 +1,0 @@
-Site URL: https://freepornstreams.org/
-Contact: 
-DMCA: This site does not store any files on its server. We only index and link to content provided by other sites.
