@@ -1,3 +1,0 @@
-Site URL: https://goodporn.to/
-Contact: https://goodporn.to/
-DMCA: https://goodporn.to/dmca/
