@@ -1,2 +1,0 @@
-Site URL: https://pornkinox.to/
-DMCA: https://pornkinox.to/dmca/
