@@ -6,3 +6,4 @@ pornwild - added jump to page number (Next Page - context menu)
 thepornfull - fix listing
 pornone - fix listing, search, categories
 hobbyporn - new site
+free porn streams and pornkinox removed cause of k2s hoster
